# Home_alarm

./: CMakeLists.txt  README.md
ESP32_software/: README.md  sdkconfig
ESP32_software/main/: main.c
ESP32_software/main/APP/: app.c  app_cfg.h
ESP32_software/main/CAN/: user_can.h
ESP32_software/main/HY_SRF/: hy_srf.c
ESP32_software/main/IR/: ir.c  ir_cfg.h
main/: CMakeLists.txt
main/APP/: app.c  app.h
main/CAN/: user_can.c  user_can_cfg.h
main/HY_SRF/: hy_srf.c  hy_srf.h  hy_srf_cfg.h
main/IR/: ir.h
